tests/ui/did_you_mean/recursion_limit_deref.stderr
error: reached the recursion limit finding the struct tail for `K`
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "20"]`

error: reached the recursion limit finding the struct tail for `Bottom`
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "20"]`

error: reached the recursion limit finding the struct tail for `Bottom`
  --> $DIR/recursion_limit_deref.rs:14:9
   |
LL |         struct $outer($inner);
   |         ^^^^^^^^^^^^^^^^^^^^^^
...
LL | link!(A, B);
   | ----------- in this macro invocation
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "20"]`
   = note: this error originates in the macro `link` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0055]: reached the recursion limit while auto-dereferencing `J`
  --> $DIR/recursion_limit_deref.rs:55:22
   |
LL |     let x: &Bottom = &t;
   |                      ^^ deref recursion limit reached
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "20"]` attribute to your crate (`recursion_limit_deref`)

error[E0308]: mismatched types
  --> $DIR/recursion_limit_deref.rs:55:22
   |
LL |     let x: &Bottom = &t;
   |            -------   ^^ expected `&Bottom`, found `&Top`
   |            |
   |            expected due to this
   |
   = note: expected reference `&Bottom`
              found reference `&Top`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0055, E0308.
For more information about an error, try `rustc --explain E0055`.
